<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <View style="@style/horizontalLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg_menu_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/detail_particulars_bt"
                style="@style/detail_item_style"
                android:onClick="showParticulars"
                android:text="@string/detail_particulars"/>

            <View
                style="@style/verticalLine"
                android:layout_width="1px"/>

            <RadioButton
                style="@style/detail_item_style"
                android:onClick="showPictrue"
                android:text="@string/detail_pictrue"/>

            <View
                style="@style/verticalLine"
                android:layout_width="1px"/>

            <RadioButton
                style="@style/detail_item_style"
                android:onClick="showVideo"
                android:text="@string/detail_video"/>

            <View
                style="@style/verticalLine"
                android:layout_width="1px"/>

            <RadioButton
                style="@style/detail_item_style"
                android:onClick="showReference"
                android:text="@string/detail_reference"/>
        </RadioGroup>
    </LinearLayout>

    <View
        style="@style/horizontalLine"
        android:layout_height="@dimen/x3"
        android:background="@color/textOrange"/>

    <FrameLayout
        android:id="@+id/preview_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>